# bittbridge

./: .env.example  .env.miner.template  .env.validator.template  .pre-commit-config.yaml  Makefile  PRECOG_METHODOLOGY.md  README.md  experiments.md  model_params.yaml  pyproject.toml  requirements.txt  setup.py  test.py
bittbridge/: mock.py  protocol.py
bittbridge/api/: get_query_axons.py
bittbridge/base/: miner.py  neuron.py  validator.py
bittbridge/utils/: config.py  iso_ne_api.py  timestamp.py  wandb.py
bittbridge/validator/: forward.py  reward.py
docs/: MINER_AND_VALIDATOR_ARCHITECTURE.md  Release Notes.md  miners.md  system_requirements.md  validators.md
docs/guide/: 01-before-you-start.md  02-gcp-vm-setup.md  02-local-setup.md  02-setup.md  03-training-custom-model.md  03-wallets-and-tokens.md  04-gcp-vm-setup.md  04-run-miner.md  05-run-validator.md  05-update-and-restart.md  05-wallets-and-tokens.md  06-run-miner.md  (+16 more)
miner_example/: GUIDE.md  README.md  config.example.yml  usdt_cny_1h.csv
miner_model/: MODEL_LOADING_ISSUE.md  README.md  __init__.py  diagnose_vm.py  miner_plugin.py  model_interface.py  requirements.txt  rnn_model.h5
miner_model_energy/: ARCHITECTURE.md  ExampleMinerModels_UPDATED_with_load_lags.ipynb  TEST-03-25-2026-5min-single.csv  __init__.py  artifacts.py  custom_plugin_runtime.py  data_io.py  features.py  inference_runtime.py  ml_config.py  model_params.yaml  models_cart.py  models_hgb.py  models_linear.py  models_lstm.py  models_rf.py  models_rnn.py  pipeline.py  run_training_smoke.py  split.py  storage_train_io.py  supabase_io.py
neurons/: miner.py  validator.py
scripts/: check_iso_ne_api.py  pyproject.toml
snp_oracle/: protocol.py
tests/: conftest.py  test_miner_model_energy.py  test_package.py  test_template_validator.py
(+39 files in other folders)
