[tool.poetry]
name = "snp_oracle"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
# ^1.2.3 means >=1.2.3 and <2.0.0
# ~1.2.3 means >=1.2.3 and <1.3.0

# Python version - 3.9, 3.10, 3.11
python = ">3.9.1,<3.12"

# Bittensor Version Strict
bittensor = "9.3.0"
bittensor-cli = "9.3.0"

# Bittensor Dependencies We Also Need
pydantic = "^2.3.0"
numpy = ">=2.0.1,<2.1.0"

# Subnet Specific Dependencies
yfinance = "^0.2.54"
pytz = "^2024.2"
gitpython = "^3.1.44"
wandb = "^0.19.9"
pandas-market-calendars = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pre-commit-hooks = "5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.4"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = [
    ".venv",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
    "docs",
]

#[tool.flake8]
# Refer to the `.flake8` file
